<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green"
    tools:context=".SignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/logoFragmentContainer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/WelcomeFragmentContainer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoFragmentContainer5"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/WelcomeFragmentContainer5"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_edit_text"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/primary_green"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/primary_green"
            app:startIconDrawable="@drawable/emaildefaulticon"
            app:startIconTint="@color/primary_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignInTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lenscraft_custom_edit_text"
                android:focusable="true"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/Email"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_green"
                android:textSize="12sp"
                android:visibility="visible"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPasswordClickableTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextInputLayoutSignIn"
            android:layout_alignEnd="@id/passwordTextInputLayoutSignIn"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/secondary_brown"
            android:textSize="10sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayoutSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameTextInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_edit_text"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/primary_green"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/primary_green"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_green"
            app:startIconDrawable="@drawable/padlockicon"
            app:startIconTint="@color/primary_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignInTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lenscraft_custom_edit_text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_green"
                android:textSize="12sp"
                android:visibility="visible"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotPasswordClickableTv"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_orange_button"
            android:fontFamily="@font/raleway_extra_bold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/secondary_brown"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/continueWithLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/signInBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/left_line" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/continue_with"
                android:textColor="@color/secondary_brown"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/left_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/socialMediaSignInLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/continueWithLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/lenscraft_custom_round_button"
                android:src="@drawable/google" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_black"
                android:text="@string/or"
                android:textColor="@color/secondary_brown"
                android:textSize="11sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/lenscraft_custom_round_button"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUpClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/socialMediaSignInLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="67dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alreadyHaveAccTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_light"
                android:text="@string/dont_have_an_acc"
                android:textColor="@color/secondary_brown"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signUpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/sign_up"
                android:textColor="@color/secondary_brown"
                android:textSize="14sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signInBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/secondary_orange"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>