<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:background="@color/primary_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/singlePackageItemCardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/secondary_brown"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/packageTypeCardViewContainer"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    app:cardBackgroundColor="@color/secondary_orange"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/package_camera" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/brandModelCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_toRightOf="@id/packageTypeCardViewContainer"
                    app:cardBackgroundColor="@color/primary_green"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/packageItemBrandTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="48dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/raleway_bold"
                            android:text="@string/brand"
                            android:textColor="@color/secondary_brown" />

                        <TextView
                            android:id="@+id/packageItemDescriptionTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/packageItemBrandTV"
                            android:layout_marginStart="48dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/raleway_bold"
                            android:text="@string/description"
                            android:textColor="@color/secondary_brown" />

                        <TextView
                            android:id="@+id/packageItemModelTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/packageItemDescriptionTV"
                            android:layout_marginStart="48dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/raleway_bold"
                            android:text="@string/model"
                            android:textColor="@color/secondary_brown" />

                        <TextView
                            android:id="@+id/packageItemAmountTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/packageItemModelTV"
                            android:layout_marginStart="48dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/raleway_bold"
                            android:text="@string/amount"
                            android:textColor="@color/secondary_brown" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>