<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/logoFragmentContainer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/WelcomeFragmentContainer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoFragmentContainer4"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/WelcomeFragmentContainer4"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_edit_text"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/primary_green"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/primary_green"
            app:startIconDrawable="@drawable/usernamedefaulticon"
            app:startIconTint="@color/primary_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lenscraft_custom_edit_text"
                android:focusable="true"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_green"
                android:textSize="12sp"
                android:visibility="visible"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameTextInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_edit_text"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/primary_green"
            app:boxBackgroundMode="none"
            app:boxStrokeErrorColor="@color/secondary_orange"
            app:errorEnabled="false"
            app:errorTextColor="@color/primary_green"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/primary_green"
            app:startIconDrawable="@drawable/emaildefaulticon"
            app:startIconTint="@color/primary_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lenscraft_custom_edit_text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/Email"
                android:inputType="text|textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_green"
                android:textSize="12sp"
                android:visibility="visible"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_edit_text"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/primary_green"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/primary_green"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_green"
            app:startIconDrawable="@drawable/padlockicon"
            app:startIconTint="@color/primary_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lenscraft_custom_edit_text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_green"
                android:textSize="12sp"
                android:visibility="visible"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatpasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTextInputLayout"
            android:layout_marginStart="24dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_edit_text"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/primary_green"
            app:boxBackgroundMode="none"
            app:boxStrokeErrorColor="@color/secondary_orange"
            app:errorTextColor="@color/primary_green"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/primary_green"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_green"
            app:startIconDrawable="@drawable/padlockicon"
            app:startIconTint="@color/primary_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatpasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lenscraft_custom_edit_text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/repeat_password"
                android:inputType="text|textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_green"
                android:textSize="12sp"
                android:visibility="visible"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeatpasswordTextInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/lenscraft_custom_orange_button"
            android:fontFamily="@font/raleway_extra_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/secondary_brown"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/signInClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signInBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="67dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alreadyHaveAccTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_light"
                android:text="@string/already_have_an_acc"
                android:textColor="@color/secondary_brown"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/signInTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/sign_in"
                android:textColor="@color/secondary_brown"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>